<resources>
    <string name="app_name">Valorant Guia</string>
    <string name="edit_login">LOGIN</string>
    <string name="edit_senha">SENHA</string>
    <string name="txt_login">LOGIN</string>
    <string name="txt_senha">SENHA</string>
    <string name="btn_login">LOGAR</string>
    <string name="btn_sair">Sair</string>
    <string name="txt_cadastrar">CADASTRAR INVOCADOR</string>
    <string name="txt_voltar">Voltar</string>

    <string name="txt_vavaGuia">MAPAS</string>
    <string name="txt_agents">AGESNTS</string>

    <string name="btnHome">MAPAS</string>
    <string name="btnAgents">AGENTS</string>

    <string name="app_nameYoutube">VAVA Guia</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <string name="btn_news">NEWS</string>
    <string name="txt_news">NEWS</string>

    <string name="btn_menu">MENU</string>

    <string name="btn_logout">LOGOUT</string>

    <string name="btn_maps_sunset">SUNSET</string>
    <!--    <string name="btn_maps_pearl">PEARL</string>-->
    <string name="btn_maps_icebox">ICEBOX</string>
    <string name="btn_maps_bind">BIND</string>
    <string name="btn_maps_ascent">ASCENT</string>
    <string name="btn_maps_split">SPLIT</string>


    <string name="txt_button_sunset">01 SUNSET</string>
    <string name="txt_button_icebox">02 ICEBOX</string>
    <string name="txt_button_bind">03 BIND</string>
    <string name="txt_button_ascent">04 ASCENT</string>
    <string name="txt_button_split">05 SPLIT</string>

    <string name="title_activity_bind">bindActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="agents_brimstone">BRIMSTONE</string>
    <string name="agents_phoenix">PHOENIX</string>
    <string name="agents_sage">SAGE</string>
    <string name="agents_sova">SOVA</string>
    <string name="agents_viper">VIPER</string>
    <string name="agents_cypher">CYPHER</string>
    <string name="agents_reyna">REYNA</string>
    <string name="agents_killjoy">KILLJOY</string>
    <string name="agents_breach">BREACH</string>
    <string name="agents_omen">OMEN</string>
    <string name="agents_jett">JETT</string>
    <string name="agents_raze">RAZE</string>
    <string name="agents_skye">SKYE</string>
    <string name="agents_yoru">YORU</string>
    <string name="agents_astra">ASTRA</string>
    <string name="agents_kayo">KAY/O</string>
    <string name="agents_chamber">CHAMBER</string>
    <string name="agents_neon">NEON</string>
    <string name="agents_fade">FADE</string>
    <string name="agents_harbor">HARBOR</string>
    <string name="agents_gekko">GEKKO</string>
    <string name="agents_deadlock">DEADLOCK</string>
    <string name="agents_iso">ISO</string>
    <string name="agents_clove">CLOVE</string>
    <string name="title_cadastrar">CADASTRAR INVOCADOR</string>

    <string name="txt_button_attack">ATAQUE</string>
    <string name="txt_button_defense">DEFESA</string>

    <string name="nome_mapa_sunset">Sunset</string>
    <string name="nome_mapa_icebox">Icebox</string>
    <!-- Adicione outros nomes de mapa conforme necessário -->
    <string name="mapa_nao_selecionado">Nenhum mapa selecionado</string>
    <string name="close_dialog">tela\n</string>

    <string name="nome_invocador">INVOCADOR</string>
    <string name="nome_tag">TAG</string>


</resources>
