<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#101823"
    app:layout_marginBaseline="20dp"
    tools:context=".TelaPrincipal.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/iconvalorant" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center"
                    android:fontFamily="@font/valorant_font"
                    android:importantForAccessibility="no"
                    android:text="@string/txt_vavaGuia"
                    android:textColor="@color/white"
                    android:textSize="26sp" />
            </LinearLayout>

            <!-- Primeiro Botão -->
            <FrameLayout
                android:layout_width="332dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="332dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button_click_effect_maps_sunset"
                    android:contentDescription="@string/btn_maps_sunset"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:text="@string/txt_button_sunset"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <!-- Segundo Botão -->
            <FrameLayout
                android:layout_width="332dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp">

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_click_effect_maps_icebox"
                    android:contentDescription="@string/btn_maps_icebox"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:fontFamily="@font/valorant_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:text="@string/txt_button_icebox"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <!-- Terceiro Botão -->
            <FrameLayout
                android:layout_width="332dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp">

                <ImageButton
                    android:id="@+id/btnMapaBind"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_click_effect_maps_bind"
                    android:contentDescription="@string/btn_maps_bind" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:text="@string/txt_button_bind"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </FrameLayout>

            <!-- Quarto Botão -->
            <FrameLayout
                android:layout_width="332dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp">

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:fontFamily="@font/valorant_font"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_click_effect_maps_ascent"
                    android:contentDescription="@string/btn_maps_ascent"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:text="@string/txt_button_ascent"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <!-- Quinto Botão -->
            <FrameLayout
                android:layout_width="332dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp">

                <ImageButton
                    android:id="@+id/imageButton6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_click_effect_maps_split"
                    android:contentDescription="@string/btn_maps_split"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:fontFamily="@font/valorant_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="8dp"
                    android:text="@string/txt_button_split"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </FrameLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>