<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cadastro">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_title_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/title_cadastrar"
            android:textColor="#1B376C"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/edit_nome_cadastro"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="Digite o seu nome"
            android:inputType="text" />

        <EditText
            android:id="@+id/edit_idade_cadastro"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="Digite a sua idade"
            android:inputType="number" />

        <EditText
            android:id="@+id/edit_senha_cadastro"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="Escolha a sua senha"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_salvar_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/txt_cadastrar"
            android:textSize="20sp"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/btn_voltar_cadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_voltar"
            android:textSize="20sp"
            app:cornerRadius="0dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>